--- a/src/styles.scss
+++ b/src/styles.scss
@@ -240,3 +240,9 @@ app-html:has(ins.adsbygoogle[data-ad-status='unfilled']),
 .aditem:has(ins.adsbygoogle[data-ad-status='unfilled']) {
   display: none;
 }
+.adsbygoogle,
+ins[data-ad-client] {
+  display: block;
+  z-index: 1;
+  position: relative;
+}
