--- a/src/view/side/index.component.html
+++ b/src/view/side/index.component.html
@@ -1,4 +1,4 @@
-<nz-layout class="layout">
+<nz-layout class="layout" [class.showSidebar]="openSidebar">
   <nz-spin
     nzSimple
     *ngIf="commonService.sliceMax === 0"
@@ -11,17 +11,48 @@
       [(nzCollapsed)]="isCollapsed"
       [nzTrigger]="null"
     >
-      <div class="logo dark-bg" (click)="handleCollapsed()">
-        <img [src]="commonService.settings.favicon" class="logo-img" />
-        <span class="web-title" *ngIf="!isCollapsed">{{
-          commonService.settings.sideTitle || commonService.title
-        }}</span>
+      <div class="mobile-collapse flex md:hidden" (click)="toggleSidebar()">
+        <nz-icon
+          *ngIf="!openSidebar"
+          nzType="double-right"
+          nzTheme="outline"
+          class="text-base !text-gray-500"
+        />
+        <nz-icon
+          *ngIf="openSidebar"
+          nzType="double-left"
+          nzTheme="outline"
+          class="text-base !text-gray-500"
+        />
+      </div>
+
+      <div
+        class="logo dark-bg pointer-events-none md:pointer-events-auto"
+        (click)="handleCollapsed()"
+      >
+        <ng-content *ngIf="logoImage; else noLogo">
+          <img
+            [src]="commonService.settings.favicon"
+            class="logo-img"
+            *ngIf="isCollapsed; else noCollased"
+          />
+          <ng-template #noCollased>
+            <img class="h-full pointer-events-none" [src]="logoImage" />
+          </ng-template>
+        </ng-content>
+
+        <ng-template #noLogo>
+          <img [src]="commonService.settings.favicon" class="logo-img" />
+          <span class="web-title" *ngIf="!isCollapsed">{{
+            commonService.settings.sideTitle || commonService.title
+          }}</span>
+        </ng-template>
       </div>
 
       <ul
         nz-menu
         nzMode="inline"
-        class="sider dark-scrollbar dark-bg select-none"
+        class="sider dark-bg select-none auto-scrollbar"
       >
         <li
           nz-submenu
@@ -35,12 +66,19 @@
           [nzOpen]="item.id === menuOpenId"
         >
           <ng-template #titleTpl>
-            <img *ngIf="item.icon" class="sideicon" [src]="item.icon" />
+            <app-logo
+              *ngIf="item.icon"
+              [src]="item.icon"
+              class="mr-2.5 flex-center sideicon"
+              [size]="25"
+              [radius]="0"
+              [name]="item.title"
+            />
             <span class="menu-title ellipsis">{{
               isCollapsed && item.icon
                 ? ''
                 : isCollapsed && !item.icon
-                ? item.title.slice(0, 4)
+                ? item.title
                 : item.title
             }}</span>
           </ng-template>
@@ -57,9 +95,16 @@
                 commonService.oneIndex === pageIdx &&
                 commonService.twoIndex === idIdx
               "
-              (click)="commonService.handleClickClass(el.id)"
+              (click)="onClickNav(el)"
             >
-              <img *ngIf="el.icon" class="sideicon fixicon" [src]="el.icon" />
+              <app-logo
+                *ngIf="el.icon"
+                [src]="el.icon"
+                class="mr-2 flex-center"
+                [size]="25"
+                [radius]="0"
+                [name]="el.title"
+              />
               <span class="ellipsis">{{ el.title }}</span>
 
               <div
@@ -82,21 +127,20 @@
       </ul>
     </nz-sider>
 
-    <nz-layout class="inner-layout">
+    <nz-layout class="inner-layout dark-bg">
       <div
-        class="search-header"
+        *ngIf="openSidebar"
+        class="mask"
+        (click)="toggleSidebar(false)"
+      ></div>
+      <app-swiper
         *ngIf="commonService.settings.sideThemeImages.length > 0"
-      >
-        <app-swiper
-          [images]="commonService.settings.sideThemeImages"
-          [autoplay]="commonService.settings.sideThemeAutoplay"
-          [height]="commonService.settings.sideThemeHeight"
-        />
-      </div>
-
-      <component-group></component-group>
-
-      <app-search class="mobile-search" />
+        [images]="commonService.settings.sideThemeImages"
+        [autoplay]="commonService.settings.sideThemeAutoplay"
+        [height]="commonService.settings.sideThemeHeight"
+      />
+      <app-search />
+      <component-group />
       <div class="px-2.5">
         <app-web-list [search]="false" [overflow]="true" [iconSize]="35" />
       </div>
