--- a/src/view/system/setting/index.component.html
+++ b/src/view/system/setting/index.component.html
@@ -966,11 +966,7 @@
       <nz-form-item>
         <nz-form-label [nzSpan]="4">{{ $t('_title') }}</nz-form-label>
         <nz-form-control [nzSpan]="10">
-          <input
-            nz-input
-            formControlName="shortcutTitle"
-            [placeholder]="$t('_defaultTitle')"
-          />
+          <input nz-input formControlName="shortcutTitle" />
         </nz-form-control>
       </nz-form-item>
 
