feat: Add conditional rendering to ensure that side image components are only displayed when data is available

--- a/src/view/light/index.component.html
+++ b/src/view/light/index.component.html
@@ -138,6 +138,7 @@
     <app-side-images
       class="max-[1280px]:w-[200px] max-[1080px]:hidden"
       [data]="commonService.settings.lightImages"
+      *ngIf="commonService.settings.lightImages.length > 0"
     />
   </div>
 
