feat: adjust style layout

--- a/src/view/light/index.component.html
+++ b/src/view/light/index.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <main
-      class="homepage dark-border-color dark-bg xl:w-[1000px] lg:w-[800px]"
+      class="homepage dark-border-color dark-bg w-full xl:w-[1000px] lg:w-[800px]"
       [ngClass]="{
         '2xl:w-[1200px]':
           commonService.settings.lightImages.length <= 0 && !componentMaxWidth
