fix: add missing commas in various components and services for consistency
- Added missing commas in constructor parameters and object literals across multiple components and services to ensure consistent code style and prevent potential syntax errors.
- Updated function parameters and object properties to include trailing commas where applicable.
- Ensured that all changes maintain the existing functionality while improving code readability and maintainability.

--- a/src/components/create-web/index.component.html
+++ b/src/components/create-web/index.component.html
@@ -30,9 +30,10 @@
         <nz-form-control [nzSpan]="20" [nzErrorTip]="$t('_requiredName')">
           <nz-input-group nzSearch [nzAddOnAfter]="suffixButton">
             <input
+              #inputTitle
               formControlName="title"
               nz-input
-              [readonly]="getting"
+              [readonly]="getting || translating"
               [placeholder]="getting ? $t('_pendingGet') : ''"
             />
           </nz-input-group>
@@ -165,10 +166,11 @@
         <nz-form-label [nzSpan]="4">{{ $t('_webDesc') }}</nz-form-label>
         <nz-form-control [nzSpan]="20">
           <textarea
+            #inputDesc
             formControlName="desc"
             nz-input
             [nzAutosize]="{ minRows: 3, maxRows: 5 }"
-            [readonly]="getting"
+            [readonly]="getting || translating"
             [placeholder]="getting ? $t('_pendingGet') : ''"
           >
           </textarea>
