feat: enhance file write feedback and add refresh option in updateFileContent

--- a/src/view/system/index.component.html
+++ b/src/view/system/index.component.html
@@ -86,6 +86,7 @@
           {{ $t('_confInfo') }}
         </li>
         <li
+          *ngIf="!isSelfDevelop"
           nz-menu-item
           [nzSelected]="currentMenu === 'info'"
           (click)="goRoute('/system/info')"
