--- a/src/components/create-web/index.component.html
+++ b/src/components/create-web/index.component.html
@@ -204,7 +204,7 @@
                 (ngModelChange)="onSelectChange(idx)"
               >
                 <nz-option
-                  *ngFor="let tag of tagList"
+                  *ngFor="let tag of tagList()"
                   [nzLabel]="tag.name"
                   [nzValue]="tag.id"
                 >
@@ -225,7 +225,7 @@
         </nz-form-item>
       </div>
 
-      <nz-form-item *ngIf="tagList.length > 0">
+      <nz-form-item *ngIf="tagList().length > 0">
         <nz-form-label [nzSpan]="4" [nzNoColon]="true"></nz-form-label>
         <nz-form-control [nzSpan]="20">
           <button nz-button nzType="default" nzBlock (click)="addMoreUrl()">
