--- a/src/view/system/tag/index.component.html
+++ b/src/view/system/tag/index.component.html
@@ -16,10 +16,6 @@
   {{ $t('_save') }}
 </button>
 
-<div class="mb-4 !text-red-500 font-bold" *ngIf="!isSelfDevelop">
-  {{ $t('_buildTip') }}
-</div>
-
 <nz-table #basicTable [nzData]="tagList">
   <thead>
     <tr>
@@ -60,7 +56,9 @@
         />
       </td>
       <td>
-        <a (click)="moveUp(idx)">{{ $t('_moveUp') }}</a>
+        <a (click)="moveUp(idx)" [class.invisible]="idx === 0">{{
+          $t('_moveUp')
+        }}</a>
         <a (click)="moveDown(idx)" class="mx-2.5">{{ $t('_moveDown') }}</a>
         <a
           *ngIf="!data.isInner"
